@@ -36,6 +36,7 @@
 - Fixed keys extraction in luks2hashcat - now extracts all active keys
 - Prevent Hashcat from hanging by checking during startup that the output file is a named pipe
 - Fixed debug mode 5 by adding the missing colon between original-word and finding-rule
+- Skip generated rule that was the result of chaining rule operation and caused this generated rule to exceed the maximum number of function calls
 
 ##
 ## Technical
